# chess_vision

./: .gitignore  README.md  pyproject.toml
src/chess_vision/: __init__.py  main.py
src/chess_vision/camera/: take_video.py  test_stream.py
src/chess_vision/dataset/: data_collections.py  dataset.py  label_squares.py  loaders.py  parse_large_dataset.py
src/chess_vision/model/: model.py
src/chess_vision/train/: train.py
